feat: load product groups from database aggregates